2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* report.tcl:
	* report.man:
	* pkgIndex.tcl:  Set version of the package to to 0.3.1

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* report.man: More semantic markup, less visual one.

2002-03-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* report.n: 
	* report.man: Corrected example for "captionedtable".

2002-03-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* report.man: Added example of formatting a matrix using tabular
	  reports (See tcllib module "struct" too.). Fixes #530207.

2002-02-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* report.man: New file, manpage in doctools format.

2002-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Version up to 0.3 to differentiate development from the
	  version in the tcllib 1.2 release.

	* report.tcl: 
	* report.test: Updated code and tests to cover all paths through the
	  code.

2001-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* report.n:
	* report.tcl:
	* pkgIndex.tcl: Version up to 0.2

2001-08-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* report.test: Fixed broken error messages for 8.4. Using