@@ -8,7 +8,7 @@
 # Copyright (c) 2001 by Andreas Kupries <a.kupries@westend.com>
 # All rights reserved.
 #
-# RCS: @(#) $Id: report.test,v 1.6 2004/02/14 05:59:21 andreas_kupries Exp $
+# RCS: @(#) $Id: report.test,v 1.7 2005/10/21 20:11:54 andreas_kupries Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -19,15 +19,27 @@ if {[lsearch [namespace children] ::tcltest] == -1} {
 # Ensure we test _this_ local copy and one installed somewhere else.
 #
 package forget report
+package forget struct::matrix
+
 catch {namespace delete ::report}
-if {[catch {source [file join [file dirname [info script]] report.tcl]} msg]} {
+catch {namespace delete ::struct::matrix}
+
+set moddir  [file dirname [file dirname [file join [pwd] [info script]]]]
+
+if {[catch {source [file join $moddir struct matrix.tcl]} msg]} {
+    puts "skipped [file tail [info script]] (matrix.tcl): $msg"
+    return
+}
+if {[catch {source [file join $moddir report report.tcl]} msg]} {
     puts "skipped [file tail [info script]]: $msg"
     return
 }
 
-package require struct
+package require struct::matrix
+package require report
+
 puts "- report [package present report]"
-puts "- struct [package present struct]"
+puts "  - struct::matrix [package present struct::matrix]"
 
 namespace import ::report::report
 
