@@ -1,3 +1,8 @@
+2005-10-21  Andreas Kupries <andreask@activestate.com>
+
+	* report.test: Reduced struct usage to struct::matrix, and brought
+	  the header code up to date.
+
 2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
